--- a/A2G Dag 1/Dag1.CSS
+++ b/A2G Dag 1/Dag1.CSS
@@ -19,3 +19,17 @@ nav {
     text-decoration: none;
     color: #555;
   }
+
+  body{
+    background-color: orange;
+  }
+
+  main{
+
+  }
+
+  footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
