--- a/A2G Dag 2/Dag2.CSS
+++ b/A2G Dag 2/Dag2.CSS
@@ -19,3 +19,16 @@ nav {
     text-decoration: none;
     color: #555;
   }
+  body{
+    background-color: blue;
+  }
+
+  main{
+
+  }
+
+  footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
