--- a/A2G Dag 3/dag 3.Css
+++ b/A2G Dag 3/dag 3.Css
@@ -19,3 +19,17 @@ nav a {
   text-decoration: none;
   color: #555;
 }
+
+body{
+  background-color: red;
+}
+
+main{
+
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
