--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,16 @@ nav a {
   text-decoration: none;
   color: #555;
 }
+body{
+  background-color: yellow;
+}
+
+main{
+
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
