--- a/a2g-dag3/dag3.css
+++ b/a2g-dag3/dag3.css
@@ -1,8 +1,20 @@
 nav{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    border: 1px solid black;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  gap: 5px;
+  border: 1px solid black;
+}
+
+nav a {
+  display: inline-block;
+  min-height: 9rem;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  border: solid black 1px;
+  text-align: center;
+  text-decoration: none;
+  color: #aaa;
+}
