--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@ nav{
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem;
   gap: 5px;
   border: 1px solid black;
+}
+
+nav a {
+  display: inline-block;
+  min-height: 9rem;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  border: solid black 1px;
+  text-align: center;
+  text-decoration: none;
+  color: #aaa;
 }
