--- a/a2g-dag7/oppg7.css
+++ b/a2g-dag7/oppg7.css
@@ -12,6 +12,36 @@ nav a {
 main {
    height: 100vh; 
 }
+
+.card-w {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px black;
+    border-radius: 5px;
+    max-width: 648px;
+}
+
+.card-c{
+display: flex;
+flex-direction: column;
+border: solid 1px black;
+}
+
+.cardText-c{
+
+}
+
+h3{
+    margin: 0px;
+    pad: 0px;
+}
+
+
+.cardImg {
+    border-radius: 5px;
+}
+
 footer{
     display: flex;
     flex-direction: column;
