--- a/a2g-dag7/dag7.css
+++ b/a2g-dag7/dag7.css
@@ -1,4 +1,5 @@
 nav{
+    background-image: url(/Img/steve-busch-BX8I3BNFvKI-unsplash.jpg);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
