--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 nav{
+  background-image: url(/Img/steve-busch-BX8I3BNFvKI-unsplash.jpg);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -20,10 +21,30 @@ nav a {
 
 main {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.int{ 
+  display: flex;
+  flex-direction: column;
+}
+
+.about{
+  align-items: center;
+  
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+  max-width: 350px;
+  margin-left: 10px;
 }
 
 footer{
   display: flex;
+  border-top: solid 3px black;
   justify-content: center;
   align-items: center;
   gap: 1em;
