--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ nav a {
   color: #aaa;
 }
 
+body {
+  background-color: #181818;
+  margin: 0;
+}
+
 main {
   height: 100vh;
   display: flex;
@@ -31,13 +36,16 @@ main {
   flex-direction: column;
 }
 
+.profil{
+  
+}
+
 .about{
   align-items: center;
-  
   text-align: left;
   justify-content: center;
   align-items: center;
-  padding-top: 50px;
+  padding-top: 80px;
   max-width: 350px;
   margin-left: 10px;
 }
