--- a/a2g-dag7/oppg7.css
+++ b/a2g-dag7/oppg7.css
@@ -62,6 +62,7 @@ p{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    
 }
 
 .box {
@@ -72,6 +73,7 @@ p{
     padding-left: 5px;
     padding-right: 8px;
     max-width: 700px;
+    border-radius: 10px;
 
 }
 footer{
