--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ nav a {
   display: inline-block;
   padding: 0.5rem;
   border-radius: 0.2rem;
-  border: solid black 1px;
   text-align: center;
   text-decoration: none;
   color: #aaa;
@@ -34,20 +33,23 @@ main {
 .int{ 
   display: flex;
   flex-direction: column;
+  color: #aaa;
+
 }
 
 .profil{
-  
+  border-radius: 150px;
 }
 
 .about{
+  color: #aaa;
   align-items: center;
   text-align: left;
   justify-content: center;
   align-items: center;
-  padding-top: 80px;
+  padding-top: 130px;
   max-width: 350px;
-  margin-left: 10px;
+  margin-left: 30px;
 }
 
 footer{
